manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2023.9
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: tmp
          configMap:
            name: home-assistant
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant
