manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
      name: http
  selector:
      app: home-assistant
