manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  tls:
    - hosts:
        - home-assistant.home.saltrelli.com
      secretName: home-assistant-cert
  rules:
    - host: home-assistant.home.saltrelli.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port: 
                  number: 80
